<resources>
    <string name="app_name">LIBERATOR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_liberator">www.liberator.ua</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_settings_app">SettingsAppActivity</string>
    <string name="settings_app">Settings</string>
    <string name="params_boiler">Params boiler</string>
    <string name="params_burner">Params burner</string>
    <string name="diagnostics_modules">Diagnostics modules</string>
    <string name="service_menu">Service menu</string>
    <string name="blow">Продувка</string>
    <string name="loading">Загрузка</string>
    <string name="fairing">Розжиг</string>
    <string name="stabil_burn">Стабилизация факела</string>
    <string name="quality">Quality</string>
    <string name="fuel">Fuel</string>
    <string name="air">Air</string>
    <string name="after_burning">Afterburning</string>
    <string name="title_activity_diagnostic">DiagnosticActivity</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="heating_element">Heating element</string>
    <string name="additional_relay">Additional relay</string>
    <string name="burner_cleaning">Burner cleaning (scraper)</string>
    <string name="fan">Fan</string>
    <string name="burner_auger">Burner auger</string>
    <string name="hopper_auger">Hopper auger</string>
    <string name="title_activity_settings_set_params">Set Params</string>

    <string name="double_click_to_exit">Please click &lt;BACK again to exit</string>
    <string name="service">Service</string>
    <string name="temperature_now">Текущая температура\nкотловой воды</string>
    <string name="power">Мощность</string>
    <string name="set_temperature">Установ. Температура\nкотловой воды</string>
    <string name="air_">Воздух</string>
    <string name="celsij">C</string>
    <string name="percent">%</string>
    <string name="power_value">kW</string>
    <string name="temperature_boiler_for_disable">Температура котловой воды для отключения горелки</string>
    <string name="default_param"/>
    <string name="default_value">1</string>
    <string name="gisteresis">Гистерезис температуры</string>
    <string name="delta_boiler">Разница температур для включения горелки. Дельта котла</string>
    <string name="temperature_smoke">Температура дымовых газов</string>
    <string name="temperature_enable_pump">Температура включения насоса котловой воды</string>
    <string name="cycle_clear_boiler">Цикл очистки котла по отношению к очистке горелки</string>
    <string name="auto_start">Автозапуск</string>
    <string name="mode">Режим работы</string>
    <string name="standard">Стандарт</string>
    <string name="fuel_loading">Заагрузка топлива</string>
    <string name="system_burn">Система розжига</string>
    <string name="control_relay">Управление электромагнитным реле</string>
    <string name="settings_module">Настройки по модели горелки</string>
    <string name="time_start_loading">Время загрузки стартовой порции топлива</string>
    <string name="time_burning_ten">Время нагрева ТЭНа</string>
    <string name="time_burning_fuel">Время розжига топлива при старте</string>
    <string name="period_resucling_sneck">Пауза на выключение шнека горелки после вращения шнека бункера</string>
    <string name="pause_on_disable">Циклы очистки горелки на количество загружаемых порций топлива - рабочего цикла</string>
    <string name="recycling_clear_count">Нижний аварийный порог, а так же порог перехода при розжиге</string>
    <string name="select_pellet">Выбор качества пеллеты:</string>
    <string name="air_in_fitil">Воздух в режиме – «Фитиль»</string>
    <string name="selecting_pellet">Выбор пелеты</string>
    <string name="air_recycling_burning">Воздух в рабочем режиме</string>
    <string name="devise_not_have_bluetoth">Device does not support Bluetooth</string>
    <string name="cycle">циклов</string>
    <string name="speed_recycler_fun">Скорость вращения вентилятора при розжиге</string>
    <string name="count_fuel_general_cycler">Количество подаваемого топлива в основном цикле работы</string>
    <string name="pausa_in_work">Пауза между загрузками топлива в рабочем режиме</string>
    <string name="сщгте_агуд_шт_ашшешд">Количество подаваемого топлива в режиме – «Фитиль»</string>
    <string name="pausa_betwen_load">Пауза между загрузками топлива в режиме – «Фитиль»</string>
    <string name="enable_out_termosstat">Внешний термостат</string>
    <string name="sec">секунд</string>
    <string name="is_min_value">Это минимальный параметр</string>
    <string name="is_max_value">Это максимальный параметр</string>
    <string name="enter_password">Для продолжения, необходимо ввести пароль из 6-ти символов</string>
    <string name="ok">Ok</string>
    <string name="invalid_password">Пароль не верный!</string>
    <string name="close_after_five_sec">Программа будет закрыта через 2 секунды</string>
    <string name="none_paired">Select Me!</string>
    <string name="auto_start_text">AUTO START</string>
</resources>
