<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.StartActivity"
    tools:showIn="@layout/activity_start">


    <RelativeLayout
        android:id="@+id/rl_left_params"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quality"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_param_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_quality"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_show_module"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/crane">

        </ImageView>

        <ImageView
            android:id="@+id/iv_param_signal_modem"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/size_icon"
            android:src="@drawable/good_network">

        </ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/iv_circle_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/full_start_circle_min" />

        <ImageView
            android:id="@+id/iv_circle_start_press"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/icon_size_64dp"
            android:padding="@dimen/icon_size_64dp"/>

        <ImageButton
            android:id="@+id/ib_right"
            android:layout_width="@dimen/icon_size_64dp"
            android:layout_height="@dimen/icon_size_64dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/black"
            android:src="@drawable/bt_right" />

        <ImageButton
            android:id="@+id/ib_left"
            android:layout_width="@dimen/icon_size_64dp"
            android:layout_height="@dimen/icon_size_64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/black"
            android:src="@drawable/bt_left" />

        <ImageButton
            android:id="@+id/ib_settings"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/size_icon_process"
            android:layout_toLeftOf="@+id/ib_right"
            android:layout_toStartOf="@+id/ib_right"
            android:background="@color/black"
            android:src="@drawable/ic_settings" />

        <!--<include-->
        <!--layout="@layout/fragment_temperature_water_now"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true" />-->

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size_icon"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_air_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_air"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/air"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_param_air"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_air"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>


        <ImageButton
            android:id="@+id/ib_start_stop"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/transparent"
            android:src="@drawable/start" />

        <RelativeLayout
            android:id="@+id/rl_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fuel"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/pb_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fuel"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>